# geoproc_playground

./: CMakeLists.txt  load_stl.c  load_stl.h  main.c  vec_math.c  vec_math.h
tests/: CMakeLists.txt  vec_math_test.cpp
